--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     Participation Certificate in international robotics challenge organized by IIT, Bombay in
                     association with IRC India.
                     and also Participation Certificate of first position in youth fest organized by PTU ?</p>
-                <a href="http://127.0.0.1:5500/app/sonu.pdf" class="btn" download="sonu.pdf" target="blank">Downlod
+                <a href="https://sonu1994roy.github.io/sonumyportfolio.github.io/" class="btn" download="sonu.pdf" target="blank">Downlod
                     CV</a>
             </div>
         </div>
