--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <img src="myimg2.jpg" alt="">
                 </div>
                 <div class="content1">
-                    <h2>Sonu Kumar<br><span>Web Devleper</span></h2>
+                    <h2>Sonu Kumar<br><span>Web Developer</span></h2>
                 </div>
                 <!-- </div> -->
             </div>
