--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     Participation Certificate in international robotics challenge organized by IIT, Bombay in
                     association with IRC India.
                     and also Participation Certificate of first position in youth fest organized by PTU ?</p>
-                <a href="https://sonu1994roy.github.io/sonumyportfolio.github.io/" class="btn" download="sonu.pdf" target="blank">Downlod
+                <a href="https://sonu1994roy.github.io/sonumyportfolio.github.io/sonu.pdf" class="btn" download="sonu.pdf" target="blank">Downlod
                     CV</a>
             </div>
         </div>
@@ -236,7 +236,7 @@
                 <form class="form" id="myForm" action="">
                     <h2>Message Me</h2>
                     <div>
-                        <input type="text" placeholder="Nmae" name="name" id="name" required>
+                        <input type="text" placeholder="Name" name="name" id="name" required>
                         <input type="text" placeholder="Email" name="email" id="email" required>
                     </div>
                     <input type="text" placeholder="Subject" name="subject" id="subject" required>
