--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                     <ul class="nav-list">
-                        <li class="nav-item"><a href="#home" class="nav-link scroll-link">HOME</a></li>
+                        <li class="nav-item"><a href="#home" class="nav-link scroll-link rmv-link">HOME</a></li>
                         <li class="nav-item"><a href="#about" class="nav-link scroll-link">ABAOUT</a></li>
                         <li class="nav-item"><a href="#skills" class="nav-link scroll-link">SKILLS</a></li>
                         <li class="nav-item"><a href="#Technology" class="nav-link scroll-link">TECHNOLOGY</a></li>
@@ -50,13 +50,12 @@
             </div>
         </nav>
         <div class="seting">
-            <a class="fas fa-cog">
-                <div class="open-seting">
+            <i id="seting-icon" class="fas fa-cog"> </i>
+                <div class="open-seting open">
                     <i id="dark1" class="far fa-moon" style="font-size: 1.5rem; cursor: pointer;"> Dark</i>
                     <span><i id="light" class="fas fa-adjust" style="font-size: 1.5rem; cursor: pointer;">
                             Normal</i></span>
                 </div>
-            </a>
         </div>
         <img class="banner" src="logo4.png" alt="">
         <!-- my self -->
@@ -183,7 +182,7 @@
                     Node Rest Framework for backend services used Mongo DB (NoSQL) for Database services...!
                     Basic knowledge of How to work LAN or WAN and PCB designing using Or-Cadsoftware...?
                 </p>
-                <a href="#" class="btn">Read More</a>
+                <a href="/app\moreskill.html" class="btn">Read More</a>
             </div>
         </div>
     </section>
