change some error

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="project" data-aos="fade-up" data-aos-duration="2000">
                 <span> <i class="fab fa-phoenix-framework"></i></span>
                 <h2>Framework</h2>
-                <p><STrong style="color: blue;">BOOTSTRAP</STrong> is a free and open-source CSS framework directed at
+         <p><STrong style="color: blue;">BOOTSTRAP</STrong> is a free and open-source CSS framework directed at
                     responsive, mobile-first front-end web
                     development. It contains CSS- and JavaScript-based design templates for typography,
                     forms, buttons, navigation, and other interface components. <br><STrong
@@ -150,7 +150,7 @@
                     <h4>HTML5</h4>
                     <div class="skills-ilt">
                         <div class="skills-bar html"></div>
-                        <span>95%</span>
+                        <span>90%</span>
                     </div>
                 </div>
                 <div class="skills-box">
@@ -176,11 +176,11 @@
                 </div>
             </div>
             <div class="skills-right" data-aos="fade-left" data-aos-duration="2000">
-                <h3>My creative skills and Project</h3>
-                <p>Full stack web developer using JavaScript and good practice.!
-                    HTML5,CSS/CSS3 , JAVASCRIPT , BOOTSTRAP , EXPRESS FRAMEWORK , NODE.JS..!
-                    Node Rest Framework for backend services used Mongo DB (NoSQL) for Database services...!
-                    Basic knowledge of How to work LAN or WAN and PCB designing using Or-Cadsoftware...?
+                <h3>My Technical skills and Projects undergone</h3>
+                <p>Full stack web developer using <strong style="color: #ff4f4f; font-weight: 500;font-size: 2rem;">:-</strong> <br>
+                   <strong style="color: #ff4f4f; font-weight: 500;font-size: 2rem;">@</strong> HTML5, CSS3, JAVASCRIPT, BOOTSTRAP, EXPRESS FRAMEWORK, NODE.JS.<br>
+                   <strong style="color: #ff4f4f; font-weight: 500;font-size: 2rem;">@</strong>  Node Rest Framework for backend services used Mongo DB (NoSQL) for Database services.<br>
+                   <strong style="color: #ff4f4f; font-weight: 500;font-size: 2rem;">@</strong> Basic knowledge of working with LAN or WAN and PCB designing using Or-Cad Software.
                 </p>
                 <a href="/app\moreskill.html" class="btn">Read More</a>
             </div>
@@ -194,8 +194,8 @@
             <div class="left" data-aos="fade-down-right" data-aos-duration="2000">
                 <h2>Get In Touch</h2>
                 <p><span id="time" data-aos="fade-right" data-aos-duration="4000"></span>
-                    <br> For contact to Me, please email us using the form and
-                    contact number below any Remarks and Ask Just write a message!
+                    <br> To contact, please email using the available form or
+                    reachout to the given number. Suggestions and appreciation are most welcome.
                 </p>
 
                 <div>
@@ -226,7 +226,7 @@
                     <span class="icon"><i class="fas fa-phone"></i></span>
                     <span class="content">
                         <h3>Phone</h3>
-                        <span>+91xxxxxx10</span>
+                        <span>+918709796492</span>
 
                     </span>
                 </div>
