--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
     <header class="header" id="home">
         <!-- navigation -->
-        <nav class="nav">
+        <nav class="nav container">
             <div class="navigation container">
                 <div class="logo">
                     <h1>MY PORTFOLIO <span>.</span></h1>
