--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     Participation Certificate in international robotics challenge organized by IIT, Bombay in
                     association with IRC India.
                     and also Participation Certificate of first position in youth fest organized by PTU ?</p>
-                <a href="https://sonu1994roy.github.io/sonumyportfolio.github.io/sonu.pdf" class="btn" download="sonu.pdf" target="blank">Downlod
+                <a href="https://sonu1994roy.github.io/sonumyportfolio.github.io/sonu.pdf" class="btn" download="sonu.pdf" target="blank">Download
                     CV</a>
             </div>
         </div>
